# bookops-overdrive

./: .gitignore  README.md  dev-requirements.txt  pyproject.toml  requirements.txt
.github/workflows/: unit-tests.yaml
bookops_overdrive/: __init__.py  authorize.py  errors.py  query.py  session.py
tests/: conftest.py  test_authorization.py  test_live.py  test_query.py  test_session.py
