[project]
name = "bookops-overdrive"
version = "0.0.1"
description = "Overdrive Developer API wrapper"
authors = [
    {name = "Charlotte Kostelic",email = "charlottekostelic@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "requests (>=2.32.4,<3.0.0)",
    "types-requests (>=2.32.4.20250611,<3.0.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"
pytest-cov = "^6.2.1"

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
	"livetest: mark a test hitting a live API endpoint",
    "http_code: use to pass returned http code to 'mock_session_response' fixture that mocks 'requests.Session.send' method",
]
addopts = '-m "not livetest" --cov=bookops_overdrive/'

[tool.coverage.run]
relative_files = true
source = ["."]
omit = ["tests/*"]

[tool.mypy]
warn_unused_ignores = true
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = ["tests.*"]
disallow_untyped_defs = false